fix: fixed line height in collapse box

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2840,6 +2840,11 @@ sup.footnote-reference {
         pre {
             width: 100%;
         }
+
+        p {
+            line-height: 1.6em;
+            margin-bottom: 0.8rem;
+        }
     }
 }
 
